# Skynet-Blocker

./: BUILD.bazel  README.md  WORKSPACE  anonimisation.py  deps.bzl  dockerfile.yaml  go.mod  go.sum  makefile  requirements.txt  requirements_lock.txt  results.ipynb  sydonia_anomisation.py
clients/go/: skynet.pb.go
clients/python/: skynet_pb2.py  skynet_pb2.pyi  skynet_pb2_grpc.py
clients/web/: BUILD.bazel  skynet.swagger.json
cmd/gateway/: BUILD.bazel  main.go
deployments/: BUILD.bazel  docker-compose.yaml
gatewayutils/: BUILD.bazel  gateway.go  handlers.go  main.go
protos/: BUILD.bazel  protos.py  skynet.pb.go  skynet.pb.gw.go  skynet.proto  skynet_grpc.pb.go
src/: BUILD.bazel  anonimisation.py  core_pandas.py  server.py  sydonia_anomisation.py
src/anonympy/: core_pandas.py
src/protos/: BUILD.bazel  skynet_pb2.pyi
