load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

package(default_visibility = ["//visibility:public"])

go_image(
    name = "skynet_gateway_image_base",
    embed = [
        "//cmd/gateway:go_default_library",
    ],
    goarch = "amd64",
    goos = "linux",
)

container_image(
    name = "skynet_image",
    base = "//src:anonimisation_image_base",
    ports = [
        "50052",
        "443",
    ],
)

container_image(
    name = "skynet_gateway_image",
    base = ":skynet_gateway_image_base",
    ports = [
        "80",
    ],
)

container_push(
    name = "docker_push",
    format = "Docker",
    image = ":skynet_image",
    registry = "index.docker.io",
    repository = "francoischastel/skynet-blocker",
    tag = "1.0.0-beta",
)

container_push(
    name = "docker_push_gateway",
    format = "Docker",
    image = ":skynet_gateway_image",
    registry = "index.docker.io",
    repository = "francoischastel/skynet-blocker",
    tag = "1.0.0-gateway-beta",
)
