load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/FrancoisChastel/Skynet-Blocker/gatewayutils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity:go_default_library",
    ],
)

go_library(
    name = "gateway",
    srcs = [
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/FrancoisChastel/Skynet-Blocker/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
    ],
)
