load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    data = [
        "//clients/web:skynet.swagger.json",
    ],
    importpath = "github.com/Fluximmo/ArtificialImmo/cmd/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//gatewayutils:go_default_library",
        "//protos:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
